# SimpleCalcApp

./: SampleCalcApp.postmancollection.json  app.py  calculator.db  config.py  docker-compose.yml  image.bat  pyproject.toml
api/: Dockerfile_api  divide_microservice.py  multiply_microservice.py  subtract_microservice.py
api/add/: Dockerfile  add.py
api/divide/: Dockerfile
api/multiply/: Dockerfile  requirements.txt
api/subtract/: Dockerfile
db/: Dockerfile_db  database.py  requirements.txt  setup_database.py
tests/: test_add_microservice.py  test_divide_microservice.py  test_multiply_microservice.py  test_subtract_microservice.py
ux/: Dockerfile_ux  index.html  script.js
