[tool.poetry]
name = "simplecalcapp"
version = "0.1.0"
description = "Simple Calculator App build using Python Flask, REST API and SQLlite DB"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
request2 = "^0.2"
jsonify = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
